# maliit-integration

./: Makefile  Makefile.am  README  configure.ac
gnome3/: maliit-settings-gtk  meego-im-uiserver.desktop
platform/gnome3/: maliit.conf  start-meego-im-uiserver
wetab/: WeTab.conf  rotate-screen  xbindkeys.desktop
