
dist_bin_SCRIPTS = \
		   platform/gnome3/start-meego-im-uiserver \
		   target/wetab/rotate-screen

dist_sysconf_DATA = target/wetab/xbindkeys.conf

xinputddir = $(sysconfdir)/X11/xinit/xinput.d
dist_xinputd_DATA = platform/gnome3/maliit.conf

autostartdir = $(sysconfdir)/xdg/autostart
dist_autostart_DATA = \
		      platform/gnome3/meego-im-uiserver.desktop \
		      target/wetab/xbindkeys.desktop

targetsdir = $(datadir)/meegotouch/targets
dist_targets_DATA = target/wetab/WeTab.conf
